--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "description": "backend of real-estate",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "build": "rimraf dist &&  npx tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "npm run build &&  concurrently \"npx tsc -w\" \"nodemon  --exec ts-node src/index.ts\" ",
+    "dev": "npm run build &&  concurrently \"npx tsc -w\" \"nodemon  --exec ts-node -r tsconfig-paths/register src/index.ts\" ",
     "db:generate": "npx drizzle-kit generate",
-    "db:reset": "ts-node src/scripts/reset-db.ts",
-    "db:push": "npx drizzle-kit push"
+    "db:reset": "ts-node -r tsconfig-paths/register src/scripts/reset-db.ts",
+    "db:push": "npx drizzle-kit push",
+    "postdb:push": "ts-node -r tsconfig-paths/register src/scripts/configuration-db.ts"
   },
   "keywords": [
     "rent",
@@ -34,6 +35,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.15.6",
+    "tsconfig-paths": "^4.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "rimraf": "^6.0.1",
     "shx": "^0.4.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
